# internal/controller/v1/handler.go
@@ -3,9 +3,11 @@ package v1
 import (
 	"dev/profileSaver/internal/model"
 	"encoding/json"
+	"errors"
 	"github.com/rs/zerolog/log"
 	"github.com/uptrace/bunrouter"
 	"net/http"
+	"strings"
 )
 
 // createUser
@@ -14,28 +16,27 @@ import (
 // @Description Create new user
 // @Accept  json
 // @Produce  json
-// @Param input body model.UserRequest true "user"
+// @Security BasicAuth
+// @Param input body controller.UserRequest true "user"
 // @Success 200
 // @Failure 500
 // @Router /v1/user [POST]
 func (h *Handler) createUser(w http.ResponseWriter, req bunrouter.Request) error {
-	ctx := req.Context()
-	ok := ctx.Value("is_admin")
-
-	if !ok.(bool) {
-		return h.responseJSON(w, req, http.StatusNetworkAuthenticationRequired, "don't have permission")
-	}
-
 	body := req.Body
 	defer body.Close()
 
-	var newUser model.UserResponse
+	var newUser model.User
 	if err := json.NewDecoder(body).Decode(&newUser); err != nil {
 		log.Error().Err(err)
 		return h.responseJSON(w, req, http.StatusBadRequest, err)
 	}
 
-	err := h.repo.CreateUser(newUser)
+	err := validate(newUser)
+	if err != nil {
+		return h.responseJSON(w, req, http.StatusBadRequest, err)
+	}
+
+	err = h.repo.CreateUser(newUser)
 	if err != nil {
 		log.Error().Err(err)
 		return h.responseJSON(w, req, http.StatusInternalServerError, err)
@@ -50,7 +51,7 @@ func (h *Handler) createUser(w http.ResponseWriter, req bunrouter.Request) error
 // @Description Get all users
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} model.UserResponse
+// @Success 200 {array} controller.UserResponse
 // @Failure 500
 // @Router /v1/user [GET]
 func (h *Handler) getAllUsers(w http.ResponseWriter, req bunrouter.Request) error {
@@ -66,7 +67,7 @@ func (h *Handler) getAllUsers(w http.ResponseWriter, req bunrouter.Request) erro
 // @Accept  json
 // @Produce  json
 // @Param id path string true "user id"
-// @Success 200 {array} model.UserResponse
+// @Success 200 {array} controller.UserResponse
 // @Failure 500
 // @Router /v1/user/{id} [GET]
 func (h *Handler) getUser(w http.ResponseWriter, req bunrouter.Request) error {
@@ -87,22 +88,15 @@ func (h *Handler) getUser(w http.ResponseWriter, req bunrouter.Request) error {
 // @Accept  json
 // @Produce  json
 // @Param id path string true "user id"
-// @Param input body model.UserRequest false "user"
+// @Param input body controller.UserRequest false "user"
 // @Success 200
 // @Failure 500
 // @Router /v1/user/{id} [PATCH]
 func (h *Handler) updateUser(w http.ResponseWriter, req bunrouter.Request) error {
-	ctx := req.Context()
-	ok := ctx.Value("is_admin")
-
-	if !ok.(bool) {
-		return h.responseJSON(w, req, http.StatusNetworkAuthenticationRequired, "don't have permission")
-	}
-
 	body := req.Body
 	defer body.Close()
 
-	var newUser model.UserResponse
+	var newUser model.User
 	if err := json.NewDecoder(body).Decode(&newUser); err != nil {
 		log.Error().Err(err)
 		return h.responseJSON(w, req, http.StatusBadRequest, err)
@@ -112,7 +106,12 @@ func (h *Handler) updateUser(w http.ResponseWriter, req bunrouter.Request) error
 
 	newUser.ID = id
 
-	err := h.repo.UpdateUser(newUser)
+	err := validate(newUser)
+	if err != nil {
+		return h.responseJSON(w, req, http.StatusBadRequest, err)
+	}
+
+	err = h.repo.UpdateUser(newUser)
 	if err != nil {
 		return h.responseJSON(w, req, http.StatusInternalServerError, err)
 	}
@@ -126,18 +125,12 @@ func (h *Handler) updateUser(w http.ResponseWriter, req bunrouter.Request) error
 // @Description Delete user
 // @Accept  json
 // @Produce  json
+// @Security BasicAuth
 // @Param id path string true "user id"
-// @Success 200 {array} model.UserResponse
+// @Success 200 {array} controller.UserResponse
 // @Failure 500
 // @Router /v1/user/{id} [DELETE]
 func (h *Handler) deleteUser(w http.ResponseWriter, req bunrouter.Request) error {
-	ctx := req.Context()
-	ok := ctx.Value("is_admin")
-
-	if !ok.(bool) {
-		return h.responseJSON(w, req, http.StatusNetworkAuthenticationRequired, "don't have permission")
-	}
-
 	id := req.Params().ByName("id")
 
 	err := h.repo.DeleteUser(id)
@@ -146,4 +139,26 @@ func (h *Handler) deleteUser(w http.ResponseWriter, req bunrouter.Request) error
 	}
 
 	return h.responseJSON(w, req, http.StatusOK, "user was deleted")
+}
+
+func validate(newUser model.User) error {
+	var reason []string
+
+	if newUser.Username == "" {
+		reason = append(reason, "empty username")
+	}
+
+	if newUser.Password == "" {
+		reason = append(reason, "empty password")
+	}
+
+	if newUser.Email == "" {
+		reason = append(reason, "empty email")
+	}
+
+	if len(reason) != 0 {
+		return errors.New(strings.Join(reason, ", "))
+	}
+
+	return nil
 }
